--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -37,12 +37,14 @@
 */			border:0;
 	box-shadow:0 2px 6px 0 hsla(0,0%,0%,0.3);
 	border-left: 7px solid var(--point);
-
+	transition: all 0.3s ease-in-out;
 }
 
 .post__lists__item:hover{
 	background-color: var(--point);
 	color: white;
+	transform: translate(-20px, 0);
+	transition: all 0.3s ease-in-out;
 }
 .post_preview{
 	position: relative;
@@ -286,7 +288,7 @@
 
 .infoTop_sub{
 	position: relative;
-	margin-top: 5px;
+	margin-top: 10px;
 	display: flex;
 	align-items: left;
 }
