--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -39,7 +39,7 @@
 		</div>
 	</header>
 	<div class="post_main" >
-		<div class="post_title"></div>
+		<div class="post_title"><h1></h1></div>
 		<div class="post_wrap">
 			<section class="post">
 			</section>
