--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -3,6 +3,7 @@
 <head>
 
     <link rel="stylesheet" type="text/css" href="../static/css/manager.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/navigation.css">
 
 </head>
 
