--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -2,23 +2,38 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+    <link rel="stylesheet" text="text/css" href="../static/css/navigation.css">
     <link rel="stylesheet" text="text/css" href="../static/css/pagination.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
 
+    <header>
+        <div class="nav_container">
 
-    <div data-aos="zoom-in" data-aos-duration="1000" class="container aos-init aos-animate">
+            <div class="nav_menus">
+                <div class="nav_logo">
+                    <a href="/" class="nav_logo_name">ROOMS</a>
+                </div>
+                <div class="nav_auth">
+                    <span id="nav_login" class="nav_login">로그인</span>
+                    <span id="nav_signup" class="nav_signup">회원가입</span>
+                </div>
+            </div>
+
+        </div>
+    </header>
+
+    <div class="container">
         <div class="background_layer"></div>
         <div>
             <span class="logo">ROOMS</span>
         </div>
         <div class="sub_container">
-            <span class="main_login">로그인</span> |
-            <span class="main_signup">회원가입</span>
+            
         </div>
         <div class="search_container">
             <i class="fas fa-search fa-2x search_icon"></i>
@@ -72,12 +87,12 @@
     </div>
 
     <div class="b_container aos-animate aos-init" data-aos="fade-left" data-aos-duration="1000">
-        <div class="b_btn_left b_btn">
+        <!-- <div class="b_btn_left b_btn">
             <img src="../static/img/main_img/arrow-left.png" alt="" class="b_btn_img">
         </div>
         <div class="b_btn_right b_btn">
             <img src="../static/img/main_img/arrow-right.png" alt="" class="b_btn_img">
-        </div>
+        </div> -->
         <div class="category_container">
 
         </div>
