--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -3,7 +3,7 @@
 <head>
 
     <link rel="stylesheet" type="text/css" href="../static/css/manager.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/navigation.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -14,8 +14,7 @@
 
             <div class="nav_menus">
                 <div class="nav_logo">
-                    <img src="../static/img/main_img/m_icon.png" class="nav_logo_icon">
-                    <a href="/" class="nav_logo_name">ROOM</a>
+                    <a href="/" class="nav_logo_name">ROOMS</a>
                 </div>
                 <a href="/" class="nav_menu">MAIN</a>
                 <a href="/post" class="nav_menu">BOARD</a>
@@ -57,6 +56,7 @@
             
         </div>
 
+        <div id="category_modify_modal_container"></div>
         <div id="category_modal_container"></div>
         <div id="board_modal_container"></div>
 
